[gd_scene load_steps=28 format=3 uid="uid://c4i7d4j4sgiva"]

[ext_resource type="Script" uid="uid://b33cjhsccjqk8" path="res://Areais/Batalha/scripts/ContainerPlayer.gd" id="1_srdai"]
[ext_resource type="Texture2D" uid="uid://d0o86rw56xggp" path="res://texture/PNG/funds/morte.png" id="2_olg25"]
[ext_resource type="StyleBox" uid="uid://ehj3gykeutk7" path="res://Resources/BoxTexture/zeno.tres" id="2_rwiij"]
[ext_resource type="Material" uid="uid://dkyctc5wpm76t" path="res://Resources/materials/SAVE.tres" id="3_8r4q0"]
[ext_resource type="Texture2D" uid="uid://ddmkqij7ityvb" path="res://texture/characters/93965.png" id="4_e0j8l"]
[ext_resource type="FontFile" uid="uid://ckj2wo0x2kbuu" path="res://texture/font/kenney_mini_square.ttf" id="5_3vpe8"]
[ext_resource type="Texture2D" uid="uid://b6aeu0vlmykxt" path="res://texture/objetos/items/itensNormais.png" id="6_3og78"]
[ext_resource type="Script" uid="uid://ckaefjju4lcp2" path="res://Godot/Godot Scripts/menu/ContainerMenu.gd" id="6_8k4ry"]
[ext_resource type="StyleBox" uid="uid://cflugrgbnk4cx" path="res://Resources/BoxTexture/zeko.tres" id="7_8k4ry"]
[ext_resource type="Texture2D" uid="uid://cf8r18omnssev" path="res://texture/PNG/icon/almas/almaanimetionambicao.tres" id="7_olg25"]
[ext_resource type="Script" uid="uid://c2dkrc2m800uw" path="res://Areais/Batalha/scripts/BatalhaSubmenuItens.gd" id="8_8r4q0"]
[ext_resource type="Theme" uid="uid://b1cv61ghjk7ko" path="res://Resources/folderTres/theme_BATALHA.tres" id="9_e0j8l"]
[ext_resource type="Script" uid="uid://dibssswvswx5c" path="res://Areais/Batalha/scripts/BatalhaSubmenuEnemies.gd" id="10_e0j8l"]
[ext_resource type="PackedScene" uid="uid://e5vh8ni8ulhb" path="res://Areais/Batalha/cenas/InimigoButton.tscn" id="11_3vpe8"]
[ext_resource type="Script" uid="uid://caiby2lvrcodw" path="res://Areais/Batalha/scripts/BatalhaSubmenuPlayers.gd" id="13_c1poc"]
[ext_resource type="Script" uid="uid://cgs6lo88bmepg" path="res://Areais/Batalha/scripts/ActMenu.gd" id="14_xramv"]
[ext_resource type="Script" uid="uid://dua2jkxyih01c" path="res://Areais/Batalha/scripts/BatalhaSubmenuExecutable.gd" id="15_d35g0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h5qq5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_c1poc"]
texture = ExtResource("2_olg25")
texture_margin_left = 16.0
texture_margin_top = 16.0
texture_margin_right = 16.0
texture_margin_bottom = 16.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
region_rect = Rect2(192, 320, 64, 64)

[sub_resource type="CanvasTexture" id="CanvasTexture_6ohf0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bjm6l"]
atlas = ExtResource("4_e0j8l")
region = Rect2(98, 0, 96, 96)

[sub_resource type="LabelSettings" id="LabelSettings_x2o57"]
font = ExtResource("5_3vpe8")
font_size = 48

[sub_resource type="AtlasTexture" id="AtlasTexture_eohca"]
atlas = ExtResource("6_3og78")
region = Rect2(96, 720, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fq6de"]
atlas = ExtResource("6_3og78")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucvin"]
atlas = ExtResource("6_3og78")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_otx5r"]
atlas = ExtResource("6_3og78")
region = Rect2(112, 656, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_y71rf"]
atlas = ExtResource("6_3og78")
region = Rect2(176, 0, 16, 16)

[node name="ContainerPlayer" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -771.0
offset_bottom = -412.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_h5qq5")
script = ExtResource("1_srdai")
metadata/_custom_type_script = "uid://b33cjhsccjqk8"

[node name="PanelFundo" type="Panel" parent="."]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_c1poc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = -3

[node name="Panel" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("2_rwiij")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Panel/MarginContainer/HBoxContainer"]
material = ExtResource("3_8r4q0")
layout_mode = 2
texture = SubResource("CanvasTexture_6ohf0")
expand_mode = 2
stretch_mode = 4

[node name="Texture" type="TextureRect" parent="VBoxContainer/Panel/MarginContainer/HBoxContainer/TextureRect"]
unique_name_in_owner = true
material = ExtResource("3_8r4q0")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_bjm6l")
expand_mode = 2
stretch_mode = 4

[node name="life" type="Label" parent="VBoxContainer/Panel/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_3vpe8")
theme_override_font_sizes/font_size = 32
text = "100/100"
vertical_alignment = 1

[node name="ActionsLabel" type="Label" parent="VBoxContainer/Panel/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_3vpe8")
theme_override_font_sizes/font_size = 24
text = "none"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ACTLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3
text = "Error"
label_settings = SubResource("LabelSettings_x2o57")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxActions" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = -3

[node name="ATK" type="VBoxContainer" parent="VBoxContainer/HBoxActions" node_paths=PackedStringArray("texture_rect", "ButtonContainer")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 1
theme_override_constants/separation = -3
script = ExtResource("6_8k4ry")
texture_rect = NodePath("TextureRect")
ButtonContainer = NodePath("ATK")

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxActions/ATK"]
visible = false
modulate = Color(0.85, 0.85, 0.85, 1)
z_index = 1
custom_minimum_size = Vector2(0, 22)
layout_mode = 2
texture = ExtResource("7_olg25")
expand_mode = 1
stretch_mode = 3

[node name="ATK" type="Button" parent="VBoxContainer/HBoxActions/ATK"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 1
mouse_filter = 2
theme_override_colors/font_focus_color = Color(0.6295736, 0.6295736, 0.6295736, 1)
theme_override_fonts/font = ExtResource("5_3vpe8")
theme_override_font_sizes/font_size = 64
theme_override_icons/icon = SubResource("AtlasTexture_eohca")
theme_override_styles/normal = ExtResource("2_rwiij")
theme_override_styles/focus = ExtResource("7_8k4ry")
button_mask = 0
icon_alignment = 1
expand_icon = true

[node name="ITM" type="VBoxContainer" parent="VBoxContainer/HBoxActions" node_paths=PackedStringArray("texture_rect", "ButtonContainer")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 1
theme_override_constants/separation = -3
script = ExtResource("6_8k4ry")
texture_rect = NodePath("TextureRect")
ButtonContainer = NodePath("ITM")

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxActions/ITM"]
visible = false
modulate = Color(0.85, 0.85, 0.85, 1)
z_index = 1
custom_minimum_size = Vector2(0, 22)
layout_mode = 2
texture = ExtResource("7_olg25")
expand_mode = 1
stretch_mode = 3

[node name="ITM" type="Button" parent="VBoxContainer/HBoxActions/ITM"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 1
mouse_filter = 2
theme_override_colors/font_focus_color = Color(0.6295736, 0.6295736, 0.6295736, 1)
theme_override_fonts/font = ExtResource("5_3vpe8")
theme_override_font_sizes/font_size = 64
theme_override_icons/icon = SubResource("AtlasTexture_fq6de")
theme_override_styles/normal = ExtResource("2_rwiij")
theme_override_styles/focus = ExtResource("7_8k4ry")
button_mask = 0
icon_alignment = 1
expand_icon = true

[node name="EXE" type="VBoxContainer" parent="VBoxContainer/HBoxActions" node_paths=PackedStringArray("texture_rect", "ButtonContainer")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 1
theme_override_constants/separation = -3
script = ExtResource("6_8k4ry")
texture_rect = NodePath("TextureRect")
ButtonContainer = NodePath("EXE")

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxActions/EXE"]
visible = false
modulate = Color(0.85, 0.85, 0.85, 1)
z_index = 1
custom_minimum_size = Vector2(0, 22)
layout_mode = 2
texture = ExtResource("7_olg25")
expand_mode = 1
stretch_mode = 3

[node name="EXE" type="Button" parent="VBoxContainer/HBoxActions/EXE"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 1
theme_override_colors/font_focus_color = Color(0.6295736, 0.6295736, 0.6295736, 1)
theme_override_fonts/font = ExtResource("5_3vpe8")
theme_override_font_sizes/font_size = 64
theme_override_icons/icon = SubResource("AtlasTexture_ucvin")
theme_override_styles/normal = ExtResource("2_rwiij")
theme_override_styles/focus = ExtResource("7_8k4ry")
button_mask = 0
icon_alignment = 1
expand_icon = true

[node name="DEF" type="VBoxContainer" parent="VBoxContainer/HBoxActions" node_paths=PackedStringArray("texture_rect", "ButtonContainer")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 1
theme_override_constants/separation = -3
script = ExtResource("6_8k4ry")
texture_rect = NodePath("TextureRect")
ButtonContainer = NodePath("DEF")

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxActions/DEF"]
visible = false
modulate = Color(0.85, 0.85, 0.85, 1)
z_index = 1
custom_minimum_size = Vector2(0, 22)
layout_mode = 2
texture = ExtResource("7_olg25")
expand_mode = 1
stretch_mode = 3

[node name="DEF" type="Button" parent="VBoxContainer/HBoxActions/DEF"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 1
mouse_filter = 2
theme_override_colors/font_focus_color = Color(0.6295736, 0.6295736, 0.6295736, 1)
theme_override_fonts/font = ExtResource("5_3vpe8")
theme_override_font_sizes/font_size = 64
theme_override_icons/icon = SubResource("AtlasTexture_otx5r")
theme_override_styles/normal = ExtResource("2_rwiij")
theme_override_styles/focus = ExtResource("7_8k4ry")
button_mask = 0
icon_alignment = 1
expand_icon = true

[node name="ACT" type="VBoxContainer" parent="VBoxContainer/HBoxActions" node_paths=PackedStringArray("texture_rect", "ButtonContainer")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 1
theme_override_constants/separation = -3
script = ExtResource("6_8k4ry")
texture_rect = NodePath("TextureRect")
ButtonContainer = NodePath("ACT")

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxActions/ACT"]
modulate = Color(0.85, 0.85, 0.85, 1)
z_index = 1
custom_minimum_size = Vector2(0, 22)
layout_mode = 2
texture = ExtResource("7_olg25")
expand_mode = 1
stretch_mode = 3

[node name="ACT" type="Button" parent="VBoxContainer/HBoxActions/ACT"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 1
mouse_filter = 2
theme_override_colors/font_focus_color = Color(0.6295736, 0.6295736, 0.6295736, 1)
theme_override_fonts/font = ExtResource("5_3vpe8")
theme_override_font_sizes/font_size = 64
theme_override_icons/icon = SubResource("AtlasTexture_y71rf")
theme_override_styles/normal = ExtResource("2_rwiij")
theme_override_styles/focus = ExtResource("7_8k4ry")
button_mask = 0
icon_alignment = 1
expand_icon = true

[node name="itensMenu" type="PanelContainer" parent="." node_paths=PackedStringArray("submenu_players")]
unique_name_in_owner = true
visible = false
z_index = 9
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("2_rwiij")
script = ExtResource("8_8r4q0")
submenu_players = NodePath("../playerMenu")
metadata/_custom_type_script = "uid://c2dkrc2m800uw"

[node name="HBoxContainer" type="HBoxContainer" parent="itensMenu"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ItemList" type="ItemList" parent="itensMenu/HBoxContainer"]
custom_minimum_size = Vector2(174.5, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
mouse_filter = 2
mouse_force_pass_scroll_events = false
theme = ExtResource("9_e0j8l")
icon_scale = 1.6
fixed_icon_size = Vector2i(32, 16)

[node name="VBoxContainer" type="VBoxContainer" parent="itensMenu/HBoxContainer"]
custom_minimum_size = Vector2(165.5, 0)
layout_mode = 2
theme_override_constants/separation = 2

[node name="HBoxContainer" type="HBoxContainer" parent="itensMenu/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 2

[node name="HPLabel" type="RichTextLabel" parent="itensMenu/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("5_3vpe8")
bbcode_enabled = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="CPLabel" type="RichTextLabel" parent="itensMenu/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("5_3vpe8")
bbcode_enabled = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemLabel" type="RichTextLabel" parent="itensMenu/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 74)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("5_3vpe8")
bbcode_enabled = true

[node name="ExecutableMenu" type="PanelContainer" parent="." node_paths=PackedStringArray("submenu_players", "submenu_inimigos")]
unique_name_in_owner = true
visible = false
z_index = 9
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("2_rwiij")
script = ExtResource("15_d35g0")
submenu_players = NodePath("../playerMenu")
submenu_inimigos = NodePath("../inimigosMenu")
metadata/_custom_type_script = "uid://dua2jkxyih01c"

[node name="MarginContainer" type="MarginContainer" parent="ExecutableMenu"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="ExecutableMenu/MarginContainer"]
layout_mode = 2

[node name="ItemList" type="ItemList" parent="ExecutableMenu/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
mouse_filter = 2
mouse_force_pass_scroll_events = false
theme = ExtResource("9_e0j8l")
icon_scale = 1.6
fixed_icon_size = Vector2i(32, 16)

[node name="ItemLabel" type="RichTextLabel" parent="ExecutableMenu/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="actsMenu" type="PanelContainer" parent="." node_paths=PackedStringArray("submenu_inimigos")]
unique_name_in_owner = true
visible = false
z_index = 9
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("2_rwiij")
script = ExtResource("14_xramv")
submenu_inimigos = NodePath("../inimigosMenu")
metadata/_custom_type_script = "uid://cgs6lo88bmepg"

[node name="MarginContainer" type="MarginContainer" parent="actsMenu"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="actsMenu/MarginContainer"]
layout_mode = 2

[node name="ItemList" type="ItemList" parent="actsMenu/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
mouse_filter = 2
mouse_force_pass_scroll_events = false
theme = ExtResource("9_e0j8l")
icon_scale = 1.6
fixed_icon_size = Vector2i(32, 16)

[node name="ItemLabel" type="RichTextLabel" parent="actsMenu/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="inimigosMenu" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
z_index = 9
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("2_rwiij")
script = ExtResource("10_e0j8l")
metadata/_custom_type_script = "uid://dibssswvswx5c"

[node name="VBoxContainer" type="VBoxContainer" parent="inimigosMenu"]
layout_mode = 2
theme_override_constants/separation = -2

[node name="Inimigo1" parent="inimigosMenu/VBoxContainer" instance=ExtResource("11_3vpe8")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1

[node name="Inimigo2" parent="inimigosMenu/VBoxContainer" instance=ExtResource("11_3vpe8")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1

[node name="Inimigo3" parent="inimigosMenu/VBoxContainer" instance=ExtResource("11_3vpe8")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1

[node name="playerMenu" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
z_index = 9
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("2_rwiij")
script = ExtResource("13_c1poc")
metadata/_custom_type_script = "uid://caiby2lvrcodw"

[node name="ListPlayer" type="VBoxContainer" parent="playerMenu"]
layout_mode = 2
theme_override_constants/separation = -2

[node name="Player1" parent="playerMenu/ListPlayer" instance=ExtResource("11_3vpe8")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1

[node name="Player2" parent="playerMenu/ListPlayer" instance=ExtResource("11_3vpe8")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1

[node name="Player3" parent="playerMenu/ListPlayer" instance=ExtResource("11_3vpe8")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
